# ESP-P4-album

./: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/control/: slideshow_ctrl.c  slideshow_ctrl.h
main/core/: photo_album.c  photo_album.h  photo_album_constants.h
main/media/: app_extractor.c  app_extractor.h  app_stream_adapter.c  app_stream_adapter.h  image_decoder.c  image_decoder.h  image_processor.c  image_processor.h  video_player.c  video_player.h
main/network/: app_http_server.c  app_http_server.h  app_wifi.c  app_wifi.h  modern_upload_page.c  modern_upload_page.h  network_manager.c  network_manager.h  upload_page.c  upload_page.h  wifi_server.c  wifi_server.h
main/network/assets/: modern_upload.css  modern_upload.html  modern_upload.js
main/storage/: file_event_manager.c  file_event_manager.h  file_manager.c  file_manager.h
main/ui/: ui_manager.c  ui_manager.h  usb_status_ui.c  usb_status_ui.h
main/usb/: usb_manager.c  usb_manager.h  usb_msc.c  usb_msc.h
